Nombre variables y permisos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 	<string name="titleRegister">Registro</string>
 	<string name="titleHome">Registro</string>
 	<string name="titleSearch">Buscar</string>
-	<string name="titleUsuario">Usuario</string>
+	<string name="titleEmail">Correo electrónico</string>
 	<string name="titlePassword">Contraseña</string>
 	<string name="titleRegistrar">Registrar</string>
 	<string name="titleRegistrarse">Registrarse</string>
